# fawkes-crypto

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: check_and_test.yml
fawkes-crypto/: Cargo.toml  README.md
fawkes-crypto/src/: constants.rs  lib.rs  macros.rs
fawkes-crypto/src/backend/: mod.rs
fawkes-crypto/src/backend/bellman_groth16/: engines.rs  group.rs  mod.rs  osrng.rs  prover.rs  setup.rs  verifier.rs
fawkes-crypto/src/backend/halo2_plonk/: deserialize_proof.rs  engines.rs  group.rs  mod.rs  proof_deserialisation_utils.rs  prover.rs
fawkes-crypto/src/backend/plonk/: engines.rs  mod.rs  plonk_config.rs  prover.rs  setup.rs  verifier.rs
fawkes-crypto/src/backend/r1cs/: const_tracker.rs  mod.rs  r1cs_file.rs  wtns_file.rs
fawkes-crypto/src/circuit/: bitify.rs  ecc.rs  eddsaposeidon.rs  mod.rs  mux.rs  poseidon.rs
fawkes-crypto/src/circuit/general/: mod.rs
fawkes-crypto/src/circuit/general/traits/: bool.rs  mod.rs  num.rs  signal.rs
fawkes-crypto/src/circuit/plonk/: bool.rs  cs.rs  mod.rs  num.rs
fawkes-crypto/src/circuit/r1cs/: bool.rs  cs.rs  lc.rs  mod.rs  num.rs  r1cs.rs
fawkes-crypto/src/core/: mod.rs  signal.rs  sizedvec.rs
fawkes-crypto/src/engines/: mod.rs
fawkes-crypto/src/engines/bls12_381/: mod.rs
fawkes-crypto/src/engines/bn256/: mod.rs
fawkes-crypto/src/native/: ecc.rs  eddsaposeidon.rs  mod.rs  poseidon.rs
fawkes-crypto/tests/: bellman_groth16.rs  circuit_ecc.rs  circuit_num.rs  circuit_poseidon.rs  halo2_plonk.rs  plonk.rs  r1cs_file.rs
fawkes-crypto_derive/: Cargo.toml
fawkes-crypto_derive/src/: lib.rs  signal.rs
ff-uint/: Cargo.toml
ff-uint/src/: lib.rs  seedbox.rs  traits.rs
ff-uint/src/ff/: mod.rs  traits.rs
ff-uint/src/num/: macros.rs  mod.rs  traits.rs
ff-uint/src/uint/: macros.rs  mod.rs  traits.rs
ff-uint/tests/: ff-uint_tests.rs
ff-uint_derive/: Cargo.toml
ff-uint_derive/src/: lib.rs
seedbox/: Cargo.toml
seedbox/src/: lib.rs
src/: bititerator.rs  constants.rs  ecc.rs  eddsaposeidon.rs  lib.rs  macros.rs  poseidon.rs  seedbox.rs  wrappedmath.rs
src/circuit/: bitify.rs  bool.rs  ecc.rs  eddsaposeidon.rs  mod.rs  mux.rs  num.rs  poseidon.rs  signal.rs
src/core/: abstractsignal.rs  cs.rs  field.rs  macros.rs  mod.rs  num.rs  osrng.rs  seedbox.rs  signal.rs  sizedvec.rs
src/helpers/: bellman.rs  mod.rs
src/helpers/groth16/: ethereum.rs  mod.rs  near.rs  prover.rs  verifier.rs
src/native/: bls12_381.rs  bn256.rs  ecc.rs  eddsaposeidon.rs  mod.rs  num.rs  poseidon.rs
