[workspace]
resolver = "2"
members = [
  "fawkes-crypto",
  "fawkes-crypto_derive",
  "ff-uint",
  "ff-uint_derive",
  "seedbox"
]

[patch."https://github.com/privacy-scaling-explorations/halo2curves"]
halo2curves = { git = "https://github.com/zeropoolnetwork/halo2curves", branch = "zeropool-near" }
