[package]
name = "fawkes-crypto"
version = "3.0.3"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
description = "zk-SNARK circuit building framework"
readme = "README.md"
homepage = "https://github.com/zeropoolnetwork/fawkes-crypto"
repository = "https://github.com/zeropoolnetwork/fawkes-crypto"
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]


[dependencies]

ff-uint = {version="0.1.4", path="../ff-uint"}
linked-list = {version="0.0.3", optional=true}
typenum = "1.12.0"
rand = "0.7.3"
byteorder = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
borsh = { version = "0.7", optional = true }
fawkes-crypto_derive = {version="3.0.3", path = "../fawkes-crypto_derive"}
impl-trait-for-tuples = "0.1.3"
getrandom = "0.2"

[dependencies.blake2_rfc]
version = "0.0.1"
package = "blake2-rfc_bellman_edition"


[dependencies.bellman]
version = "0.3.4"
package = "fawkes-crypto-bellman_ce"
default_features = false
optional = true




[features]
default=["backend_bellman_groth16", "r1cs", "borsh_support", "serde_support"]
r1cs=["linked-list"]
plonk=[]
backend_bellman_groth16=["bellman"]
heavy_tests=[]
borsh_support = ["borsh", "ff-uint/borsh_support"]
serde_support = ["serde", "ff-uint/serde_support"]
