[package]
name = "fawkes-crypto"
version = "4.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
description = "zk-SNARK circuit building framework"
readme = "README.md"
homepage = "https://github.com/zeropoolnetwork/fawkes-crypto"
repository = "https://github.com/zeropoolnetwork/fawkes-crypto"
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]


[dependencies]
ff-uint = { version = "0.1.6", path = "../ff-uint", default-features = false }
linked-list = {version="0.0.3", optional=true}
rand = { version = "0.7.3", optional = true }
byteorder = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
borsh = { version = "0.8.2", optional = true }
fawkes-crypto_derive = {version="4.0.2", path = "../fawkes-crypto_derive"}
impl-trait-for-tuples = "0.1.3"
getrandom = { version = "0.2", optional = true }
bit-vec = "0.6.3"

[dependencies.blake2_rfc]
version = "0.0.1"
package = "blake2-rfc_bellman_edition"


[dependencies.bellman]
version = "0.3.4"
package = "fawkes-crypto-bellman_ce"
default_features = false
optional = true




[features]
default=["backend_bellman_groth16", "r1cs", "borsh_support", "serde_support"]
r1cs=["linked-list"]
plonk=[]
backend_bellman_groth16=["bellman", "rand_support"]
heavy_tests=[]
borsh_support = ["borsh", "ff-uint/borsh_support"]
serde_support = ["serde", "ff-uint/serde_support"]
rand_support = ["rand", "getrandom", "ff-uint/rand_support"]
wasm = ["getrandom/js", "bellman/wasm"]

