[package]
name = "fawkes-crypto"
version = "4.5.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
description = "zk-SNARK circuit building framework"
readme = "README.md"
homepage = "https://github.com/zeropoolnetwork/fawkes-crypto"
repository = "https://github.com/zeropoolnetwork/fawkes-crypto"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]


[dependencies]
ff-uint = { version = "0.2.1", path = "../ff-uint", default-features = false }
linked-list = {version="0.0.3", optional=true}
rand = { version = "0.7.3", optional = true }
byteorder = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
borsh = { version = "0.9", optional = true }
fawkes-crypto_derive = {version="4.3.0", path = "../fawkes-crypto_derive"}
impl-trait-for-tuples = "0.1.3"
getrandom = { version = "0.2", optional = true }
bit-vec = "0.6.3"
itertools = "0.10.0"
brotli = "3.3.2"

halo2_curves = { git = "https://github.com/zeropoolnetwork/halo2curves", branch = "zeropool-near", package = "halo2curves", optional = true }
ff = "0.13.0"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20", optional = true }
halo2_wrong_ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_04_20", package = "ecc", optional = true }
halo2_wrong_transcript = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_04_20", package = "transcript", optional = true}
halo2_kzg_srs = { git = "https://github.com/han0110/halo2-kzg-srs", rev="ff65429", optional = true }
halo2_rand = {package="rand", version="0.8", optional = true}
plonk_verifier = { git = "https://github.com/zeropoolnetwork/snark-verifier", package = "snark-verifier", branch ="zeropool-near", features = [], optional = true }
# near-halo2-verifier = { git = "https://github.com/zeropoolnetwork/near-halo2-verifier", branch = "master", optional = true }

[dependencies.blake2_rfc]
version = "0.0.1"
package = "blake2-rfc_bellman_edition"


[dependencies.bellman]
version = "0.3.4"
package = "fawkes-crypto-bellman_ce"
default_features = false
optional = true




[features]
default=["plonk", "borsh_support"]
# default=["plonk", "borsh_support", "serde_support", "heavy_tests"]
r1cs=["linked-list"]
plonk=["halo2_proofs", "halo2_curves", "halo2_wrong_ecc", "halo2_kzg_srs", "halo2_wrong_transcript", "halo2_rand", "plonk_verifier", "rand_support"]
backend_bellman_groth16=["bellman", "rand_support"]
heavy_tests=[]
borsh_support = ["borsh", "ff-uint/borsh_support"]
serde_support = ["serde", "ff-uint/serde_support"]
rand_support = ["rand", "getrandom", "ff-uint/rand_support"]
wasm = ["getrandom/js", "bellman/wasm"]
