[package]
name = "ff-uint"
version = "0.1.3"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
description = "Library for building and interfacing with fixed-sized integers and finite fields"
documentation = "https://docs.rs/ff-uint/"
homepage = "https://github.com/zeropoolnetwork/ff-uint"
license = "MIT/Apache-2.0"
repository = "https://github.com/ebfull/zeropoolnetwork/ff-uint"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.3.2" }
crunchy = { version = "0.2.2", default-features = false }
qc = { package = "quickcheck", version = "0.9.0", optional = true }
rand = { version = "0.7.2", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
static_assertions = "1.1.0"
arbitrary = { version = "0.4", optional = true }
ff-uint_derive = { version = "0.1.3", path = "../ff-uint_derive" }
rand_core = "0.5"
concat-idents = "1.0.0"
borsh = "0.7"
serde = "1.0"
ref-cast = "1.0"


[dependencies.blake2_rfc]
version = "0.0.1"
package = "blake2-rfc_bellman_edition"

[features]
default = []



[[test]]
name = "ff-uint_tests"