[package]
name = "ff-uint"
version = "0.2.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
description = "Library for building and interfacing with fixed-sized integers and finite fields"
documentation = "https://docs.rs/ff-uint/"
homepage = "https://github.com/zeropoolnetwork/fawkes-crypto"
license = "MIT/Apache-2.0"
repository = "https://github.com/zeropoolnetwork/fawkes-crypto"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
crunchy = { version = "0.2.2", default-features = false }
qc = { package = "quickcheck", version = "0.9.0", optional = true }
rand = { version = "0.7.2", default-features = false, optional = true }
rustc-hex = { version = "2.1.0", default-features = false }
static_assertions = "1.1.0"
arbitrary = { version = "0.4", optional = true }
ff-uint_derive = { version = "0.2.0", path = "../ff-uint_derive" }
rand_core = { version = "0.5", default-features = false, optional = true }
concat-idents = "1.0.0"
borsh = { version = "0.8.2", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
ref-cast = "1.0"
seedbox = { version = "0.2.0", path = "../seedbox", default-features = false }

[features]
default = ["borsh_support", "serde_support", "std"]
borsh_support = ["borsh", "ff-uint_derive/borsh_support"]
serde_support = ["serde"]
rand_support = ["rand_core", "rand", "ff-uint_derive/rand_support"]
std = ["borsh/std", "serde/std", "serde/alloc", "seedbox/std", "byteorder/std", "rand/std", "rand_core/std"]

[[test]]
name = "ff-uint_tests"
