[package]
name = "ff-uint_derive"
version = "0.2.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
description = "Library for building and interfacing with fixed-sized integers and finite fields"
documentation = "https://docs.rs/ff-uint/"
homepage = "https://github.com/zeropoolnetwork/fawkes-crypto"
license = "MIT/Apache-2.0"
repository = "https://github.com/zeropoolnetwork/fawkes-crypto"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
num-bigint = {version = "0.3.1", default-features=false}
num-traits = {version = "0.2.11", default-features=false}
num-integer = {version = "0.1.42", default-features=false}
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.69", features = ["full"] }
proc-macro-crate = "0.1.5"

[features]
borsh_support = []
rand_support = []
