[package]
name = "seedbox"
version = "0.1.1"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
description = "Library for generating math objects from seeds"
homepage = "https://github.com/zeropoolnetwork/fawkes-crypto"
license = "MIT/Apache-2.0"
repository = "https://github.com/zeropoolnetwork/fawkes-crypto"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2_rfc = { version = "0.0.1", package = "blake2-rfc_bellman_edition", default-features = false }
byteorder = { version = "1.3.4", default-features = false }

[features]
default = ["std"]
std = ["blake2_rfc/std", "byteorder/std"]
