[package]
name = "seedbox"
version = "0.1.1"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
description = "Library for generating math objects from seeds"
homepage = "https://github.com/zeropoolnetwork/fawkes-crypto"
license = "MIT/Apache-2.0"
repository = "https://github.com/zeropoolnetwork/fawkes-crypto"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.0", default-features = false }
sha3 = { version = "0.9.1", default-features = false }

[features]
default = ["std"]
std = ["rand_chacha/std", "rand_core/std", "sha3/std"]
